@@ -4,13 +4,6 @@ testing_feature ("break and continue N");
 
 define test_break_n ()
 {
-   % Eventually these statements will be flagged as syntax errors.
-   % For now, use them to make sure that they do not affect the main test
-   % below.
-   loop (2) continue 4;
-   loop (3) break 2;
-   loop (3); then break 2;
-
    variable n1 = 3, n2 = 5, n3 = 7;
    variable n1_loops = 0;
    variable n2_loops = 0;
